<resources>
    <string name="app_name">NestApp</string>
    <string name="volunteer_form_title">Volunteer Form</string>
    <string name="volunteer_form_first_name">First Name</string>
    <string name="volunteer_form_last_name">Last Name</string>
    <string name="volunteer_form_phone_number">Phone Number</string>
    <string name="volunteer_form_email_address">Email Address</string>
    <string name="volunteer_form_town_city">Town/City</string>
    <string name="volunteer_form_zip_code">Zip Code</string>
    <string name="volunteer_form_address">Address</string>
    <string name="volunteer_form_submit">Submit</string>
    <string name="volunteer_form_contact_method">Preferred method of contact:</string>
    <string name="volunteer_form_push_notifications">Would you like to receive Push Notifications?</string>
    <string name="volunteer_form_yes_to_push">Yes, I would like to receive push notifications.</string>
    <string-array name="volunteer_form_preferred_contact_method">
        <item>E-mail</item>
        <item>Mobile call</item>
        <item>Text Message</item>
    </string-array>
    <string name="activity_main_title">Login</string>
    <string name="activity_main_user_name">Username</string>
    <string name="activity_main_password">Password</string>
    <string name="activity_main_forgot_password">Forgot password?</string>
    <string name="activity_main_sign_in">Sign in</string>
    <string name="activity_main_photo">Photo</string>
    <string name="activity_main_make_account">Don\'t have an account? Sign up.</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="activity_sign_up_first_name">First Name</string>
    <string name="activity_sign_up_last_name">Last Name</string>
    <string name="activity_sign_up_n_number">N00123456</string>
    <string name="activity_sign_up_email_address">example@gmail.com</string>
    <string name="activity_sign_up_phone_number">5165552345</string>
    <string name="activity_sign_up_title">Sign Up For NEST Volunteer!</string>
    <string name="activity_sign_up_background_image">Background Image</string>
    <string name="activity_sign_up_sign_up_btn">Sign up</string>
    <string name="activity_inventory_title">NEST Inventory</string>
    <string name="activity_inventory_popular">Most Popular</string>
    <string name="activity_inventory_popular_1">Peanut Butter Natural</string>
    <string name="activity_inventory_popular_2">Fresh Pasta</string>
    <string name="activity_inventory_popular_3">Milk Plain or Flavored</string>
    <string name="activity_inventory_popular_4">Whole Wheat Bread(Commercially Baked and Pre-Sliced)</string>
    <string name="activity_inventory_popular_5">Cranberry Sauce Canned</string>
    <string name="activity_inventory_popular_6">Canned Goods Low Acid(Soups, Beans, Carrots, Corn, Pasta, Peas, Potatoes, Spinach)</string>
    <string name="activity_inventory_categories">Categories</string>
    <string name="activity_inventory_category_1">Baby Food</string>
    <string name="activity_inventory_category_2">Baked Goods</string>
    <string name="activity_inventory_category_3">Beverages</string>
    <string name="activity_inventory_category_4">Condiments, Sauces, and Canned Goods</string>
    <string name="activity_inventory_category_5">Dairy Products, and Eggs</string>
    <string name="activity_inventory_category_6">Deli and Prepared Foods</string>
    <string name="activity_inventory_category_7">Food Purchased Frozen</string>
    <string name="activity_inventory_category_8">Grains, Beans, and Pasta</string>
    <string name="activity_inventory_category_9">Meat</string>
    <string name="activity_inventory_category_10">Poultry</string>
    <string name="activity_inventory_category_11">Produce</string>
    <string name="activity_inventory_category_12">Seafood</string>
    <string name="activity_inventory_category_13">Shelf Stable Foods</string>
    <string name="activity_inventory_category_14">Vegetarian Proteins</string>
    <string name="title_activity_choose">NEST Home</string>
    <string name="activity_choose_make_choice">Choose a NEST Activity:"</string>
    <string name="activity_choose_choice_1">Check Expiration Date</string>
    <string name="activity_choose_choice_2">Guest Forms</string>
    <string name="activity_choose_choice_3">Future Efforts</string>
    <string name="activity_choose_choice_4">Display True Date</string>
    <string name="title_activity_future_efforts">FutureEfforts</string>
    <string name="activity_future_efforts_make_choice">Choose a NEST Activity:"</string>
    <string name="activity_future_efforts_choice_1">Add To Inventory</string>
    <string name="activity_future_efforts_choice_2">Create NEST account</string>
    <string name="activity_future_efforts_choice_3">Schedule (Placeholder)</string>
    <string name="activity_future_efforts_choice_4">Volunteer Form</string>
    <string name="menu_main_home">HOME</string>
    <string name="activity_guest_form_name">Name</string>
    <string name="activity_guest_form_phone">Phone Number</string>
    <string name="activity_guest_form_email">Email Address</string>
    <string name="activity_guest_form_ncc_id">NCC ID</string>
    <string name="activity_guest_form_address">Address</string>
    <string name="activity_guest_form_town_city">Town/City</string>
    <string name="activity_guest_form_zip_code">Zip Code</string>
    <string name="activity_guest_form_birth_date">Birth Date</string>
    <string name="activity_guest_form_income">Household Income</string>
    <string name="activity_guest_form_more_info"><font size="14">Is there anything else you would like us to know at this time?</font></string>
    <string name="activity_guest_form_volunteer_first_name"><font size="14">What is the first name of the volunteer who helped you today?</font></string>
    <string name="activity_guest_form_volunteer_last_name"><font size="14">What is the last name of the volunteer who helped you today?</font></string>
    <string name="activity_guest_form_submit_btn">Submit</string>
    <string-array name="activity_guest_form_states_array">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string name="re_enter">Re-enter Password</string>
    <string name="availability">Availability</string>
    <string name="weekly_schedule">What times are best for you during the week?</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="api">Api</string>
    <string name="final_date">Final Date:</string>
    <string name="FinalDate">Final Date</string>
    <string name="expirationDate">Expiration Date:</string>
    <string name="metric">Metric:</string>
    <string name="MaxDoppantryLife">Max dop_pantryLife:</string>
    <string name="UPC_label">Scan in or manually enter the UPC code then tap Lookup</string>
    <string name="open_camera">Open Camera</string>
    <string name="UPC_message">UPC number from scan:</string>
    <string name="item_name_message">Item name from scan:</string>
    <string name="final_date_message">Final date of item from scan:</string>
    <string name="select_cat_and_item">Select category and item:</string>
    <string name="select_category">Select Category</string>
    <string name="select_item">Select Item</string>
    <string name="category_lbl">Category:</string>
    <string name="item_lbl">Item:</string>
    <string name="select_expiration">Select expiration date:</string>
    <string name="select_expiration_btn">Select Expiration</string>
    <string name="expiration_lbl">Expiration:</string>
    <string name="calculate">Calculate</string>
    <string name="result_placeholder">[result will display here]</string>
    <string name="title_activity_local_database">LocalDatabase</string>
    <string name="title_activity_alert_dialog">alertDialog</string>
    <string name="title_activity_interface_tests">interface_tests</string>
    <string-array name="categories_array">
        <item>Baby Food</item>
        <item>Baked Goods</item>
        <item>Beverages</item>
        <item>Condiments, Sauces and Canned Goods</item>
        <item>Dairy Products and Eggs</item>
        <item>Deli and Prepared Food</item>
        <item>Food Purchased Frozen</item>
        <item>Grains, Beans and Pasta</item>
        <item>Meat</item>
        <item>Poultry</item>
        <item>Produce</item>
        <item>Seafood</item>
        <item>Shelf Stable Foods</item>
        <item>Vegetarian Proteins</item>
    </string-array>
    <string-array name="baked_goods_subcategories">
        <item>Bakery</item>
        <item>Baking and Cooking</item>
        <item>Refrigerated Dough</item>
    </string-array>
    <string-array name="meat_subcategories">
        <item>Fresh</item>
        <item>Shelf Stable Foods</item>
        <item>Smoked or Processed</item>
        <item>Stuffed or Assembled</item>
    </string-array>
    <string-array name="poultry_subcategories">
        <item>Cooked or Processed</item>
        <item>Fresh</item>
        <item>Shelf Stable Foods</item>
        <item>Stuffed or Assembled</item>
    </string-array>
    <string-array name="produce_subcategories">
        <item>Fresh Fruits</item>
        <item>Fresh Vegetables</item>
    </string-array>
    <string-array name="seafood_subcategories">
        <item>Fresh</item>
        <item>Shellfish</item>
        <item>Smoked</item>
    </string-array>
    <string-array name="baby_food_items">
        <item>Cereal, dry mixes</item>
        <item>Dinners</item>
        <item>Formula Prepared</item>
        <item>Fruit</item>
        <item>Jars or Pouches</item>
        <item>Liquid concentrate or ready-to-feed formula</item>
        <item>Vegetables</item>
    </string-array>
    <string name="submit">Submit</string>
    <string name="atiqTitle">List View of All Products</string>
    <string name="categorySelec">UITest4</string>
    <string name="returnToATI">Press to See Related Products</string>
</resources>