<?xml version="1.0" encoding="utf-8"?>
<!--
*
* Copyright (C) 2019 The LibreFoodPantry Developers.
*
* This program is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Inventory">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_centerHorizontal="true"
            android:text="@string/activity_inventory_title"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true"
            android:text="@string/activity_inventory_popular"
            android:textSize="21.5sp" />

        <TableLayout
            android:id="@+id/most_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_centerHorizontal="true">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_popular_1" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_popular_2" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_popular_3" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_popular_4" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_popular_5" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_popular_6" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/most_popular"
            android:layout_centerHorizontal="true"
            android:text="@string/activity_inventory_categories"
            android:textSize="21.5sp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_centerHorizontal="true">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_category_1" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_category_2" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_category_3" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_category_4" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_category_5" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_category_6" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_category_7" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_category_8" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_category_9" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_category_10" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_category_11" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_category_12" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_category_13" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_inventory_category_14" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</ScrollView>