<?xml version="1.0" encoding="UTF-8"?>

<!--
 *
 * Copyright (C) 2019 The LibreFoodPantry Developers.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<!--
 * THIS LAYOUT IS DEPRECATED
 *
 * @deprecated This layout and related activity is being replaced
 * by other layouts and activities. (@see edu.ncc.nest.nestapp.GuestForm.java)
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuestForm">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <TextView
        android:id="@+id/title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_txt"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@id/editText"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText2"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText3"
        android:hint="@string/activity_guest_form_ncc_id"
        android:inputType="number"
        android:autofillHints="" />


    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText4"
        android:hint="@string/activity_guest_form_address"
        android:inputType="textPostalAddress"
        android:autofillHints="" />


    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText5"
        android:hint="@string/activity_guest_form_town_city"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText6"
        android:hint="@string/activity_guest_form_zip_code"
        android:inputType="number"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/states_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText6"
        android:layout_toEndOf="@id/editText6"
        android:entries="@array/united_states_array"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText7"
        android:hint="@string/activity_guest_form_birth_date"
        android:inputType="date"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText8"
        android:hint="@string/activity_guest_form_income"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText9"
        android:hint="@string/activity_guest_form_more_info"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText10"
        android:hint="@string/activity_guest_form_volunteer_first_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText11"
        android:hint="@string/activity_guest_form_volunteer_last_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText12"
        android:text="@string/submit" />
    <!--android:onClick="onClick"-->

</RelativeLayout>

