<?xml version="1.0" encoding="utf-8"?>
<!--
 *
 * Copyright (C) 2019 The LibreFoodPantry Developers.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:elevation="16dp"
        android:hint="@string/activity_sign_up_title"
        android:text="@string/activity_sign_up_title"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/sign_up_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:scaleType="centerCrop"
        android:src="@drawable/veg_table"
        android:contentDescription="@string/activity_sign_up_background_image" />

    <RelativeLayout
        android:id="@+id/rel_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="30dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp">


            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_sign_up_first_name"
                android:inputType="text"
                android:autofillHints="" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/activity_sign_up_last_name"
                android:inputType="text"
                android:autofillHints="" />

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/activity_sign_up_email_address"
                android:inputType="textEmailAddress"
                android:autofillHints="" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/activity_main_password"
                android:inputType="textPassword"
                android:autofillHints="" />

            <EditText
                android:id="@+id/reenter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/re_enter"
                android:inputType="textPassword"
                android:autofillHints="" />

            <EditText
                android:id="@+id/n_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/activity_sign_up_n_number"
                android:inputType="text"
                android:autofillHints=""
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/activity_sign_up_phone_number"
                android:inputType="phone"
                android:autofillHints="" />

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rel_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:text="@string/activity_sign_up_sign_up_btn"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp" />

</RelativeLayout>