<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ATIQuestionaire"
    tools:showIn="@layout/activity_a_t_i_questionaire">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/questionaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atiqTitle"
        android:layout_below="@id/categoryChosen"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/categoryChosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:text="@string/categorySelec"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/atibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnToATI"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/questionaire"/>

    <ListView
        android:id="@+id/listATI"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/atibutton"
        android:scrollbars="vertical" />


</RelativeLayout>